DSND-2826: Remove class field from Mongo documents (#73)
* DSND-2826: Reformat and renames tests, fix sonar warnings

* DSND-2826: Use converter in mongo template bean

* Converter is set with a null type to avoid persisting _class field